rewrites part 4 in report

--- a/report.tex
+++ b/report.tex
@@ -81,12 +81,13 @@ gamma corrected these too.
 
 \section{Part 4: Rendering a Sphere with Grace EM and PBRT}
 Albedo was set at 1.0 and the three sphere can be seen in the
-part4 folder of the pictures folder attached. These are the
-.pfm and .ppm images named "PBRTSphere8", 
-"PBRTSphere16" and "PBRTSphere32" for the 8,16, and
-32 sample msampling methods.\\
+"part4" folder of the "pics" folder attached. These are the
+.pfm and .ppm images named "simple_sphere8", 
+"simple_sphere16" and "simple_sphere32" for the 8,16, and
+32 sample sampling methods.\\
 \\
-As we can see from these images XXXXXXXXXXXXXXXXXXXXXXXXTODOXXXXXXXXXXX
-%Something about the noise decreasing or some shit
+As we can see from these images the general amount of noise 
+decreased quite noticeably from 8 to 16 samples and again 
+decreased from 16 to 32 but less noticeably.
 
 \end{document}
