Adds some report changes

--- a/report.tex
+++ b/report.tex
@@ -34,12 +34,15 @@ reflectance is seen in Figure 3. These can all be found in the "part1" folder
 in the pictures folder of the attached files.\\
 \\
 From air to glass, we took the parallel component measurements and found
-Brewster's angle to be \texttt{0.9837 radians} ($56.3636\degree$).
+Brewster's angle to be \texttt{0.9837 radians}  ($56.3636\degree$).
 
 \begin{figure}[h]
 	\centering
 	\includegraphics[scale=0.5]{pics/part1/air2glass.png}
-	\caption{From a 1.0 index of refraction to 1.5}
+	\caption{From a 1.0 index of refraction to 1.5.
+				The x axis shows the angle in radians that 
+				light hits the second material. The Y axis
+				shows the fresnel reflectance.}
 \end{figure}
 
 From glass to air, we took the parallel component measurements and from here
@@ -56,7 +59,7 @@ could owrk out the critical angle to be \texttt{0.7299 radians}
 
 Finally, with Schlick's approximation, we made sure to use the reflectance
 of normal incidence from the air to glass Fresnel reflectance graph which 
-was $2.0$.
+was $0.04$ from ($0.2^{2}$).
 
 \begin{figure}[h]
 	\centering	
